# tfg_abb_irb140

./: .Xauthority  .bash_history  .bashrc  .gitconfig  .wget-hsts  app.py  cerebro.py  index.html
.cache/mesa_shader_cache_db/: index
.cache/mesa_shader_cache_db/part0/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part1/: mesa_cache.idx
.cache/mesa_shader_cache_db/part10/: mesa_cache.idx
.cache/mesa_shader_cache_db/part11/: mesa_cache.idx
.cache/mesa_shader_cache_db/part12/: mesa_cache.db
.cache/mesa_shader_cache_db/part13/: mesa_cache.db
.cache/mesa_shader_cache_db/part14/: mesa_cache.db
.cache/mesa_shader_cache_db/part15/: mesa_cache.db
.cache/mesa_shader_cache_db/part16/: mesa_cache.db
.cache/mesa_shader_cache_db/part17/: mesa_cache.idx
.cache/mesa_shader_cache_db/part18/: mesa_cache.idx
.cache/mesa_shader_cache_db/part19/: mesa_cache.db
.cache/mesa_shader_cache_db/part2/: mesa_cache.idx
.cache/mesa_shader_cache_db/part20/: mesa_cache.db
.config/: QtProject.conf
.config/pulse/: baa457cde7a845b9ac0611d9201d698f-card-database.tdb  baa457cde7a845b9ac0611d9201d698f-device-volumes.tdb  cookie
.ros/log/: latest
ros2_ws_clean/install/: local_setup.sh  setup.sh
ros2_ws_clean/install/robot_control_pkg/share/robot_control_pkg/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws_clean/log/: latest_build
tfg_ws/: instalar_irb140.sh
tfg_ws/install/: local_setup.sh  setup.sh
tfg_ws/log/: latest_build
tfg_ws_COPIA_SEGURIDAD_VM/: generate_urdf.py
tfg_ws_COPIA_SEGURIDAD_VM/install/: local_setup.sh  setup.sh
tfg_ws_COPIA_SEGURIDAD_VM/install/abb_control/share/abb_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tfg_ws_COPIA_SEGURIDAD_VM/install/abb_control/share/abb_control/launch/: bailar.launch.py  conectar_web.launch.py
tfg_ws_COPIA_SEGURIDAD_VM/log/: latest_build
tfg_ws_COPIA_SEGURIDAD_VM/web/: index.html
(+158 files in other folders)
